# codex-api-configure

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CodeEditor.tsx  StatusBlock.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  switch.tsx  tabs.tsx
src/lib/: config.ts  syntax.ts
