[package]
name = "codex-api-configure"
version = "0.1.0"
description = "Codex API relay configuration tool"
authors = ["Haoyu Wang"]
edition = "2021"

[lib]
name = "codex_api_configure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
toml_edit = "0.22"
